	  (2015-08-06).
	* drivers/sensors/lm92.c and include/nuttx/sensors/lm92.h:  Add a driver
	  for the LM92 temperature sensor.  Contributed by Paul Alexander Patience
	  (2015-08-06).
	* drivers/sensors/as5048b.c and include/nuttx/sensors/as5048b.h: Add
	  support for an AS5048B rotary magnetic sensor.  From Paul Alexander
	  Patience (2015-08-07).
	* include/nuttx/spi/slave.h:  Add a definition of an SPI slave
	  interface (2015-08-08).
	* arch/arm/src/samv7: Add the framework for an SPI slave driver.  This
	  driver has a lot of missing logic on initial commit (2015-08-09).
	* arch/arm/src/samv7: Basic, no-DMA SPI slave driver is in place
	  (2015-08-10).
	* fs/vfs/epoll.c and include/sys/epoll.h: Add a very simple epoll layer
	  just around poll calls. To satisfy build app requirements.  From Anton
	  D. Kachalov (2015-08-10).
	* drivers/mtd/ramtron.c:  Update to include supportf for newer
	  RAMTRON parts.  From David Sidrane (2015-08-10).
	* Networking:  Allow receipt of empty UDP packets.  From Max Neklyudov
	  (2015-08-11).
	* drivers/sensors/mb7040.c and include/nuttx/sensors/mb7040.h: Add
	  support for a MB7040 sonar driver.  From Paul Alexander Patience
	  (2015-08-11).
	* net/udp:  Add support for send() for connected UDP sockets
	  (2015-08-11).
	* drivers/sensors/ms5805.c and include/nuttx/sensors/ms5805.h: Add
	  support for an MS5805 altimeter.  From Paul Alexander Patience
	  (2015-08-12).

7.12 2015-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* fs/vfs/fs_poll.c:  Use sem_tickwait() insteadk of sem_timedwait()
	  From Macs Neklyudov (2015-08-13).
	* fs/vfs/fs_poll.c:  If we fail to setup the poll for any file
	  descriptor, for any reason, set the POLLERR bit (2015-08-13).
	* libc/stdlib: Add support for div() to the C library.  From
	  OrbitalFox (2015-08-14).
	* libc/stdlib:  Might as well add ldiv() and lldiv() to since
	  these are equivalent to div() with long and long long types,
	  respectively, instead of int (2015-08-14).